fix(Lotto): 컬렉션 변환금지 설정